# opencl3

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASES.md
.github/workflows/: rust.yml
docs/: opencl_description.md
docs/uml/: example_opencl_system.puml  opencl_app_sequence.puml  opencl_context_objects.puml  opencl_memory_objects.puml
examples/: basic.rs  clinfo.rs  opencl2image.rs  opencl2serde.rs  opencl2svm.rs  svm.rs
src/: command_buffer.rs  command_queue.rs  context.rs  device.rs  event.rs  kernel.rs  lib.rs  memory.rs  platform.rs  program.rs  sampler.rs  svm.rs
tests/: integration_test.rs  opencl2_kernel_test.rs
